fixing photo wayyyyy too big

--- a/styles.css
+++ b/styles.css
@@ -37,4 +37,5 @@ body {
 
 .about img {
   margin-bottom: -40%;
+  height: 100px;
 }
